--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,16 @@
 #canvas {
     border: 2px solid red;
+    background-image: url(./images/background1.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.mainMenu{
+    display: flex;
+    justify-content: space-around;
+    flex-direction: column;
+    align-items: center;
+    
 }
 
 .startButton{
