--- a/styles.css
+++ b/styles.css
@@ -1,27 +1,35 @@
+body {
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 #canvas {
-    border: 2px solid red;
-    background-image: url(./images/background1.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
+  border: 2px solid red;
+  background-image: url(./images/background1.jpg);
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
-.mainMenu{
-    display: flex;
-    justify-content: space-around;
-    flex-direction: column;
-    align-items: center;
-    
+#mainMenu {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  align-content: center;
+  margin-top: 30vh;
 }
 
-.startButton{
-    background-color: rgb(12, 238, 31);
-    color: white;
-    border: transparent;
-    border-radius: 10%;
-    width: 60px;
-    height: 40px;
+
+
+
+.startButton {
+  background-color: rgb(12, 238, 31);
+  color: white;
+  border: transparent;
+  border-radius: 10%;
+  width: 60px;
+  height: 40px;
 }
 
-.title{
-    color: grey;
+.title {
+  color: grey;
 }
